--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "doris",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.18.12",
     "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "gulp-useref": "^3.1.2",
+    "run-sequence": "^2.0.0"
   }
 }
